@@ -10,56 +10,72 @@ grails.project.source.level = 1.6
 //grails.project.fork = [
 //   run: [maxMemory:1024, minMemory:64, debug:false, maxPerm:256]
 //]
-
+grails.tomcat.jvmArgs = ["-server", "-XX:MaxPermSize=1555m", "-XX:MaxNewSize=256m", "-XX:NewSize=256m",
+	"-Xms768m", "-Xmx2014m", "-XX:SurvivorRatio=128", "-XX:MaxTenuringThreshold=0",
+   "-XX:+UseTLAB", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled",
+   "-XX:+CMSIncrementalMode", "-XX:-UseGCOverheadLimit", "-XX:+ExplicitGCInvokesConcurrent"]
 grails.project.dependency.resolution = {
-    // inherit Grails' default dependencies
-    inherits("global") {
-        // specify dependency exclusions here; for example, uncomment this to disable ehcache:
-        // excludes 'ehcache'
-    }
-    log "error" // log level of Ivy resolver, either 'error', 'warn', 'info', 'debug' or 'verbose'
-    checksums true // Whether to verify checksums on resolve
-    legacyResolve false // whether to do a secondary resolve on plugin installation, not advised and here for backwards compatibility
+	// inherit Grails' default dependencies
+	inherits("global") {
+		// specify dependency exclusions here; for example, uncomment this to disable ehcache:
+		// excludes 'ehcache'
+		excludes 'grails-plugin-log4j', 'log4j'
+	}
+	log "error" // log level of Ivy resolver, either 'error', 'warn', 'info', 'debug' or 'verbose'
+	checksums true // Whether to verify checksums on resolve
+	legacyResolve false // whether to do a secondary resolve on plugin installation, not advised and here for backwards compatibility
 
-    repositories {
-        inherits true // Whether to inherit repository definitions from plugins
+	repositories {
+		inherits true // Whether to inherit repository definitions from plugins
 
-        grailsPlugins()
-        grailsHome()
-        grailsCentral()
+		grailsPlugins()
+		grailsHome()
+		grailsCentral()
 
-        mavenLocal()
-        mavenCentral()
+		mavenLocal()
+		mavenCentral()
 
-        // uncomment these (or add new ones) to enable remote dependency resolution from public Maven repositories
-        //mavenRepo "http://snapshots.repository.codehaus.org"
-        //mavenRepo "http://repository.codehaus.org"
-        //mavenRepo "http://download.java.net/maven/2/"
-        //mavenRepo "http://repository.jboss.com/maven2/"
-    }
+		// uncomment these (or add new ones) to enable remote dependency resolution from public Maven repositories
+		//mavenRepo "http://snapshots.repository.codehaus.org"
+		//mavenRepo "http://repository.codehaus.org"
+		//mavenRepo "http://download.java.net/maven/2/"
+		//mavenRepo "http://repository.jboss.com/maven2/"
+		// http://stackoverflow.com/questions/13685084/grails-2-1-1-logback-integration/
+		// http://grails.org/plugin/logback
+		// http://grails.1312388.n4.nabble.com/Logback-Plugin-Cannot-resolve-dependency-td4640217.html
+		mavenRepo "http://repo.grails.org/grails/repo/"
+		mavenRepo "http://mvnrepository.com/artifact/"
+		mavenRepo "http://repo.grails.org/grails/libs-releases/"
+		mavenRepo "http://m2repo.spockframework.org/ext/"
+		mavenRepo "http://m2repo.spockframework.org/snapshots/"
+	}
 
-    dependencies {
-        // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes e.g.
+	dependencies {
+		// specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes e.g.
 
-        // runtime 'mysql:mysql-connector-java:5.1.22'
-    }
+		// runtime 'mysql:mysql-connector-java:5.1.22'
+		compile 'org.grails.plugins:logback:0.3.1'
+		runtime "de.huxhorn.lilith:de.huxhorn.lilith.logback.appender.multiplex-classic:0.9.42.1"
+	}
 
-    plugins {
-        runtime ":hibernate:$grailsVersion"
-        runtime ":jquery:1.8.3"
-        runtime ":resources:1.2"
+	plugins {
+		runtime ":hibernate:$grailsVersion"
+		runtime ":jquery:1.8.3"
+		runtime ":resources:1.2"
 
-        // Uncomment these (or add new ones) to enable additional resources capabilities
-        //runtime ":zipped-resources:1.0"
-        //runtime ":cached-resources:1.0"
-        //runtime ":yui-minify-resources:0.1.5"
+		// Uncomment these (or add new ones) to enable additional resources capabilities
+		//runtime ":zipped-resources:1.0"
+		//runtime ":cached-resources:1.0"
+		//runtime ":yui-minify-resources:0.1.5"
 
-        build ":tomcat:$grailsVersion"
+		build ":tomcat:$grailsVersion"
 
-        runtime ":database-migration:1.3.2"
+		runtime ":database-migration:1.3.2"
 
-        compile ':cache:1.0.1'
-		
+		compile ':cache:1.0.1'
+
 		runtime ':db-reverse-engineer:0.5'
-    }
+		compile ":excel-import:1.0.0"
+		compile ":joda-time:1.4"
+	}
 }
